--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -5,16 +5,19 @@ on: [push, pull_request]
 jobs:
   slither-analysis:
     runs-on: ubuntu-latest
-    name: Run Slither
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y python3-pip git curl solc
+          sudo apt-get update -y
+          sudo apt-get install -y python3 python3-pip curl git
           pip3 install slither-analyzer
 
-      - name: Run Slither on contract
+      - name: Show Slither version
+        run: slither --version
+
+      - name: Run Slither
         run: slither ./contracts/MultiSig.sol
