--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -1,23 +1,27 @@
 name: Slither Security Analysis
 
-on: [push, pull_request]
+on:
+  push:
+    paths:
+      - 'contracts/**'
+  pull_request:
+    paths:
+      - 'contracts/**'
 
 jobs:
   slither-analysis:
     runs-on: ubuntu-latest
-
+    name: Run Slither
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Install dependencies
         run: |
-          sudo apt-get update -y
-          sudo apt-get install -y python3 python3-pip curl git
+          sudo apt-get update
+          sudo apt-get install -y python3-pip git curl solc
           pip3 install slither-analyzer
 
-      - name: Show Slither version
-        run: slither --version
-
-      - name: Run Slither
-        run: slither ./contracts/MultiSig.sol
+      - name: Run Slither on contract
+        run: |
+          slither ./contracts/MultiSig.sol || true
