--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -19,9 +19,11 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y python3-pip git curl solc
+          sudo apt-get install -y software-properties-common
+          sudo add-apt-repository ppa:ethereum/ethereum -y
+          sudo apt-get update
+          sudo apt-get install -y solc
           pip3 install slither-analyzer
 
       - name: Run Slither on contract
-        run: |
-          slither ./contracts/MultiSig.sol || true
+        run: slither ./contracts/MultiSig.sol
