--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -14,7 +14,7 @@ jobs:
     name: Run Slither and Save JSON Report
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4      # <- НОВА версія
 
       - name: Install Slither & solc
         run: |
@@ -25,12 +25,12 @@ jobs:
           sudo apt-get install -y solc
           pip3 install slither-analyzer
 
-      - name: Run Slither and Save Report
+      - name: Run Slither and save report
         run: |
           slither ./contracts/MultiSig.sol --json slither-report.json || true
 
       - name: Upload Slither JSON Report
-        uses: actions/upload-artifact@v3.1.3
+        uses: actions/upload-artifact@v4   # <- НОВА версія
         with:
           name: slither-report
           path: slither-report.json
