--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -29,22 +29,19 @@ jobs:
           sudo apt-get install -y solc
           pip3 install slither-analyzer
 
-      # 3️⃣  Запускаємо Slither і примусово зберігаємо JSON
-      - name: Run Slither and save report
+  # ─── 3️⃣  Запускаємо Slither ──────────────────────────────────────────────
+      - name: Run Slither
+        id: slither
+        continue-on-error: true          #   ✓  не зупиняємо workflow, навіть якщо Slither знайшов помилки
         run: |
           slither ./contracts/MultiSig.sol \
-            --json slither-report.json \
-            --pretty-print || true
+              --json slither-report.json
 
-          # якщо Slither нічого не знайшов і файл не створився,
-          # робимо порожній JSON -- щоб артефакт завжди існував
-          if [ ! -f slither-report.json ]; then
-            echo '{}' > slither-report.json
-          fi
-
-      # 4️⃣  Завантажуємо artefact (з’явиться в Actions → Artifacts)
+# ─── 4️⃣  Завантажуємо artefact, навіть якщо Slither повернув non-zero ───
       - name: Upload Slither JSON Report
+        if: always()                     #   ✓  виконати у будь-якому разі
         uses: actions/upload-artifact@v4
         with:
           name: slither-report
           path: slither-report.json
+
