--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -1,6 +1,5 @@
 name: Slither Security Audit
 
-# коли запускати перевірку
 on:
   push:
     paths:
@@ -15,11 +14,9 @@ jobs:
     name: Run Slither and Save JSON + MD report
 
     steps:
-      # 1. Клонуємо репозиторій у runner
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      # 2. Ставимо solc + slither
       - name: Install dependencies
         run: |
           sudo apt-get update
@@ -29,22 +26,18 @@ jobs:
           sudo apt-get install -y solc
           pip3 install slither-analyzer
 
-      # 3. Запускаємо Slither
       - name: Run Slither
         id: slither
-        continue-on-error: true          # ✅ не зриває workflow через exit-code 2
+        continue-on-error: true
         run: |
+          mkdir -p slither-output
           slither ./contracts/MultiSig.sol \
-                  --json  slither-report.json \
-                  --markdown slither-report.md
+            --json slither-output/slither-report.json \
+            --markdown slither-output/slither-report.md
 
-      # 4. Завантажуємо артефакти — окремі рядки для кожного файлу
       - name: Upload Slither reports
-        if: always()                      # ➜ виконати у будь-якому разі
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: slither-report
-          path: |
-            slither-report.json
-            slither-report.md
-
+          path: slither-output/
