--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -1,6 +1,5 @@
 name: Slither Security Audit
 
-# Запускаємо на кожному пуші в contracts/ і в PR
 on:
   push:
     paths:
@@ -15,11 +14,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Клонуємо репо
+      # 1) Клонуємо репозиторій
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      # 2. Встановлюємо solc та slither
+      # 2) Встановлюємо solc та slither
       - name: Install dependencies
         run: |
           sudo apt-get update
@@ -29,26 +28,27 @@ jobs:
           sudo apt-get install -y solc
           pip3 install slither-analyzer
 
-      # 3. Генеруємо звіт
+      # 3) Запускаємо Slither, ігноруємо код повернення, але лишаємо звіти
       - name: Run Slither
         id: slither
-        continue-on-error: true    # не падає workflow, навіть якщо знайдені проблеми
+        continue-on-error: true
         run: |
-          # створюємо папку, куди збережемо звіти
           mkdir -p slither-output
 
-          # аналізуємо ВСІ контракти в поточній папці
+          # Сам аналіз; || true — щоб shell не зупинявся на коді 2
           slither . \
             --json slither-output/slither-report.json \
-            --markdown slither-output/slither-report.md
+            --markdown slither-output/slither-report.md || true
 
-          # для впевненості виведемо вміст папки
+          # Дивимось, що лежить у папці
+          echo "=== slither-output contents ==="
           ls -al slither-output
 
-      # 4. Прикріплюємо папку з результатами як артефакт
+      # 4) Завантажуємо всю папку зі звітами як артефакт
       - name: Upload Slither reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: slither-report
           path: slither-output/
+
