--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -1,4 +1,3 @@
-# .github/workflows/slither.yml
 name: Slither Security Audit
 
 on:
@@ -12,33 +11,32 @@ on:
 jobs:
   slither-analysis:
     runs-on: ubuntu-latest
-    name: Run Slither and Save JSON + MD report
+    name: Run Slither and Save JSON + Markdown Reports
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y software-properties-common
-        sudo add-apt-repository ppa:ethereum/ethereum -y
-        sudo apt-get update
-        sudo apt-get install -y solc
-        pip3 install slither-analyzer
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y software-properties-common
+          sudo add-apt-repository ppa:ethereum/ethereum -y
+          sudo apt-get update
+          sudo apt-get install -y solc
+          pip3 install slither-analyzer
 
-    - name: Run Slither
-      run: |
-        mkdir -p slither-output
-        slither ./contracts/MultiSig.sol \
-          --json      slither-output/slither-report.json \
-          --markdown  slither-output/slither-report.md || true
-        ls -al slither-output
+      - name: Create output directory
+        run: mkdir -p slither-output
 
-    - name: Upload Slither reports
-      uses: actions/upload-artifact@v4
-      with:
-        name: slither-report
-        path: slither-output/**
-        if-no-files-found: warn       # показати попередження, але не падати
+      - name: Run Slither and generate reports
+        run: |
+          slither ./contracts/MultiSig.sol \
+            --json slither-output/slither-report.json \
+            --markdown slither-output/slither-report.md || true
 
+      - name: Upload Slither reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: slither-report
+          path: slither-output/
