--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -15,34 +15,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-
-      - name: Install Foundry
-        uses: foundry-rs/setup-foundry@v1
-        with:
-          version: nightly
-
       - name: Install Slither
         run: |
           sudo add-apt-repository ppa:ethereum/ethereum -y
           sudo apt-get update
-          sudo apt-get install -y slither-analyzer solc
+          sudo apt-get install -y solc
+          pip3 install slither-analyzer
 
-      - name: Create output directory
+      - name: Create output folder
         run: mkdir -p slither-output
 
       - name: Run Slither and save report
         run: |
           slither ./contracts/MultiSig.sol \
             --json slither-output/slither-report.json \
-            --markdown slither-output/slither-report.md \
-            --exclude-dependencies \
-            --solc-remaps '@openzeppelin=node_modules/@openzeppelin'
+            --markdown slither-output/slither-report.md
 
-      - name: Upload Slither report artifact
+      - name: Upload Slither reports
         uses: actions/upload-artifact@v3
         with:
           name: slither-reports
