--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -10,14 +10,13 @@ on:
 jobs:
   slither:
     runs-on: ubuntu-latest
-    name: Run Slither + збереження звітів
     steps:
       # 1. Клон репозиторій
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4       # ← остання стабільна major-версія
 
-      # 2. Встановити Foundry (для solc) і Slither
-      - name: Install dependencies
+      # 2. Встановити Slither + solc (через Foundry)
+      - name: Install tools
         run: |
           sudo apt-get update
           sudo apt-get install -y python3-pip
@@ -26,23 +25,21 @@ jobs:
           source ~/.bashrc
           foundryup
 
-      # 3. Створити директорію для звітів
+      # 3. Підготувати директорію для звітів
       - name: Prepare output folder
         run: mkdir -p slither-output
 
-      # 4. Запустити Slither і сформувати JSON + Markdown
+      # 4. Запустити Slither
       - name: Run Slither
-        id: slither
-        # повернення ненульового коду не зупиняє workflow
-        continue-on-error: true
+        continue-on-error: true          # не валити workflow, якщо знайдено проблеми
         run: |
           slither ./contracts/MultiSig.sol \
-            --json slither-output/slither-report.json \
-            --markdown slither-output/slither-report.md || true
+            --json slither-output/report.json \
+            --markdown slither-output/report.md || true
 
-      # 5. Завантажити артефакти (звіт)
-      - name: Upload Slither reports
-        uses: actions/upload-artifact@v2
+      # 5. Завантажити артефакти
+      - name: Upload reports
+        uses: actions/upload-artifact@v4 # ← вказуємо v4, вона доступна
         with:
           name: slither-report
           path: slither-output/**
