--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -4,41 +4,46 @@ on:
   push:
     paths:
       - "contracts/**"
-      - ".github/workflows/slither.yml"
-  workflow_dispatch:
+  pull_request:
+    paths:
+      - "contracts/**"
 
 jobs:
   slither:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+
     steps:
+      # 1. Клонуємо репо
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    # 1 Checkout
-    - uses: actions/checkout@v4
+      # 2. Ставимо solc + slither
+      - name: Install tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y software-properties-common curl python3-pip
+          sudo add-apt-repository -y ppa:ethereum/ethereum
+          sudo apt-get update
+          sudo apt-get install -y solc
+          pip3 install --user slither-analyzer
 
-    # 2 Встановлюємо curl + python3-pip + Foundry + Slither
-    - name: Install tools
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y curl python3-pip
-        pip3 install slither-analyzer
-        curl -L https://foundry.paradigm.xyz | bash
-        ~/.foundry/bin/foundryup
+      # 3. Готуємо директорію для артефактів
+      - name: Prepare output
+        run: mkdir -p slither-output
 
-    # 3 Створюємо каталог для звітів
-    - name: Prepare output
-      run: mkdir -p slither-output
+      # 4. Запускаємо Slither і пишемо звіти
+      - name: Run Slither
+        run: |
+          ~/.local/bin/slither . \
+            --json slither-output/slither.json \
+            --markdown slither-output/slither.md || true   # не валимо job, навіть якщо є баги
 
-    # 4 Запускаємо Slither
-    - name: Run Slither
-      continue-on-error: true
-      run: |
-        slither ./contracts/MultiSig.sol \
-          --json slither-output/report.json \
-          --markdown slither-output/report.md || true
-
-    # 5 Артефакти
-    - name: Upload reports
-      uses: actions/upload-artifact@v4
-      with:
-        name: slither-report
-        path: slither-output/**
+      # 5. Завантажуємо артефакти
+      - name: Upload reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: slither-reports
+          path: slither-output/**
