--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -13,35 +13,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Завантажуємо репозиторій
+      # 1. Клонуємо репозиторій
       - uses: actions/checkout@v4
 
-      # 2. Ставимо solc + slither
+      # 2. Встановлюємо solc + slither
       - name: Install tools
         run: |
           sudo apt-get update
           sudo apt-get install -y software-properties-common curl python3-pip
           sudo add-apt-repository -y ppa:ethereum/ethereum
           sudo apt-get update
-          sudo apt-get install -y solc       # 0.8.30 — норм
+          sudo apt-get install -y solc          # 0.8.30 — норм
           pip3 install --user slither-analyzer
 
       # 3. Створюємо папку для артефактів
       - name: Prepare output dir
         run: mkdir -p slither-output
 
-      # 4. Запускаємо Slither **один раз** з правильними параметрами
-            - name: Run Slither
+      # 4. Запускаємо Slither
+      - name: Run Slither
         run: |
           ~/.local/bin/slither contracts/MultiSig.sol \
             --json     slither-output/slither.json \
-            --markdown slither-output/slither.md
-            || true      # 👍 не валимо job, навіть якщо є findings
+            --markdown slither-output/slither.md \
+          || true   # ❗️ не валимо job, навіть якщо є findings
 
-      # 5. Завантажуємо що вийшло
+      # 5. Завантажуємо артефакти
       - name: Upload Slither reports
-        if: always()      # виконати в будь-якому разі
+        if: always()                      # виконати за будь-якого результату
         uses: actions/upload-artifact@v4
         with:
           name: slither-report
-          path: slither-output/
+          path: slither-output/**
