--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -4,7 +4,6 @@ on:
   push:
     paths:
       - 'contracts/**'
-      - '.github/workflows/slither.yml'
   pull_request:
     paths:
       - 'contracts/**'
@@ -14,35 +13,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1 — клон репозиторій
+      # 1. Checkout the repo
       - uses: actions/checkout@v4
 
-      # 2 — ставимо solc + slither
+      # 2. Install solc + Slither
       - name: Install tools
         run: |
           sudo apt-get update
           sudo apt-get install -y software-properties-common curl python3-pip
           sudo add-apt-repository -y ppa:ethereum/ethereum
           sudo apt-get update
-          sudo apt-get install -y solc          # 0.8.30 — норм
+          sudo apt-get install -y solc
           pip3 install --user slither-analyzer
 
-      # 3 — готуємо теки для звітів
+      # 3. Make sure the output directory exists
       - name: Prepare output dir
         run: mkdir -p slither-output
 
-      # 4 — запускаємо Slither
+      # 4. Run Slither and save reports to that directory
       - name: Run Slither
         run: |
           ~/.local/bin/slither contracts/MultiSig.sol \
             --json     slither-output/slither.json \
             --markdown slither-output/slither.md \
-          || true      # не валимо job, навіть якщо є findings
+          || true   # do not fail the job even if findings are detected
+          echo "=== contents of slither-output ==="
+          ls -R slither-output
 
-      # 5 — вантажимо артефакти
+      # 5. Upload whatever Slither produced
       - name: Upload Slither reports
-        if: always()                          # виконується у будь-якому разі
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: slither-report
           path: slither-output/**
+          retention-days: 7
