--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -1,5 +1,6 @@
-name: Slither Audit
+name: Slither Security Audit
 
+# коли запускати перевірку
 on:
   push:
     paths:
@@ -9,42 +10,41 @@ on:
       - 'contracts/**'
 
 jobs:
-  slither:
+  slither-analysis:
     runs-on: ubuntu-latest
+    name: Run Slither and Save JSON Report
 
     steps:
-      # 1. Checkout the repo
-      - uses: actions/checkout@v4
+      # 1️⃣  Клонуємо репозиторій у runner
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      # 2. Install solc + Slither
-      - name: Install tools
+      # 2️⃣  Ставимо solc + slither
+      - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y software-properties-common curl python3-pip
-          sudo add-apt-repository -y ppa:ethereum/ethereum
+          sudo apt-get install -y software-properties-common
+          sudo add-apt-repository ppa:ethereum/ethereum -y
           sudo apt-get update
           sudo apt-get install -y solc
-          pip3 install --user slither-analyzer
+          pip3 install slither-analyzer
 
-      # 3. Make sure the output directory exists
-      - name: Prepare output dir
-        run: mkdir -p slither-output
-
-      # 4. Run Slither and save reports to that directory
-      - name: Run Slither
+      # 3️⃣  Запускаємо Slither і примусово зберігаємо JSON
+      - name: Run Slither and save report
         run: |
-          ~/.local/bin/slither contracts/MultiSig.sol \
-            --json     slither-output/slither.json \
-            --markdown slither-output/slither.md \
-          || true   # do not fail the job even if findings are detected
-          echo "=== contents of slither-output ==="
-          ls -R slither-output
+          slither ./contracts/MultiSig.sol \
+            --json slither-report.json \
+            --pretty-print || true
 
-      # 5. Upload whatever Slither produced
-      - name: Upload Slither reports
-        if: always()
+          # якщо Slither нічого не знайшов і файл не створився,
+          # робимо порожній JSON -- щоб артефакт завжди існував
+          if [ ! -f slither-report.json ]; then
+            echo '{}' > slither-report.json
+          fi
+
+      # 4️⃣  Завантажуємо artefact (з’явиться в Actions → Artifacts)
+      - name: Upload Slither JSON Report
         uses: actions/upload-artifact@v4
         with:
           name: slither-report
-          path: slither-output/**
-          retention-days: 7
+          path: slither-report.json
